--- a/vimperator/.vimperatorrc
+++ b/vimperator/.vimperatorrc
@@ -26,6 +26,15 @@ nnoremap l <C-n>
 nnoremap ; :
 nnoremap : ;
 nnoremap ,s :source ~/.vimperatorrc<CR>
+nnoremap w :ril add<CR>:echo "read it later!"<CR>
+nnoremap W :ril open 
+
+nnoremap ZZ <NOP>
+
+let g:readitlater_open_as_read = 1
+
+" ime controller
+style -name commandline-ime chrome://* #liberator-commandline-command input {ime-mode: inactive;}
 
 nnoremap <C-h> :tabmove! -1<CR>
 nnoremap <C-l> :tabmove! +1<CR>
@@ -52,7 +61,7 @@ set fs
 
 
 let g:plugin_loader_roots = "~/.vimperator/vimperator-plugins"
-let g:plugin_loader_plugins = "_libly,account_switcher,appendAnchor,auto_reload,copy,direct_bookmark,feedSomeKeys_3,hatenaStar,multi_requester,pino,proxy,sbmcommentsviewer,tombloo,walk-input,stella,opener,heuristic-search,bitly,x-hint,auto_source,reload-image,loginManager,statusline-toolbar,hint-tombloo-mod,caret-hint,prevent-pseudo-domain,lo,liberator-overlay-ext,auto-bookmark,QB,caret-hint"
+let g:plugin_loader_plugins = "_libly,account_switcher,appendAnchor,auto_reload,copy,feedSomeKeys_3,hatenaStar,multi_requester,pino,proxy,tombloo,walk-input,stella,opener,heuristic-search,bitly,x-hint,loginManager,statusline-toolbar,hint-tombloo-mod,prevent-pseudo-domain,lo,liberator-overlay-ext,auto-bookmark,QB,caret-hint,readitlater"
 
 
 lazy fmaps -u='^https?://mail\.google\.com/(mail|a)/' c j k n p o u e x s r a # [ ] z ? gi gs gt gd ga gc
@@ -90,3 +99,4 @@ nnoremap -u='^http://(reader\.livedoor|fastladder)\.com/reader/' b :tombloo Link
 nnoremap -u='^http://(reader\.livedoor|fastladder)\.com/reader/' B :tombloo! Link - LDR<CR>
 nnoremap -u='^http://(reader\.livedoor|fastladder)\.com/reader/' r :xh r //*[contains(concat(" ",normalize-space(@class)," "), " hilight ")]//*[@class="item_body"]//img<CR>
 nnoremap -u='^http://(reader\.livedoor|fastladder)\.com/reader/' c :xh c //*[contains(concat(" ",normalize-space(@class)," "), " hilight ")]//*[@class="item_info"]/a[1]<CR>
+
