--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,7 +9,6 @@ set -g status-fg white
 set -g message-attr bold
 set -g message-fg white
 set -g message-bg red
-set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 set  -g pane-active-border-fg cyan
 set  -g pane-active-border-bg black
@@ -34,12 +33,12 @@ set-option -g base-index 1
 unbind l
 unbind ^C
 
-bind C-t last-pane
 bind t next-window
+bind C-t last-pane
+bind -r C-l next-layout
 bind c  new-window
-bind 1 break-pane
-bind 2 split-window -v
-bind 3 split-window -h
+bind s split-window -v
+bind v split-window -h
 
 bind C-s split-window -v
 bind C-v split-window -h
@@ -63,3 +62,15 @@ bind -r ^] paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 
+set-option -g default-terminal screen-256color
+
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+bind-key C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind-key C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+
+set-window-option -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
