--- a/vimperator/.vimperatorrc
+++ b/vimperator/.vimperatorrc
@@ -2,8 +2,6 @@ source! /Users/mizchi/.vimperatorrc.local
 set! browser.download.manager.showWhenStarting=false
 set! dom.popup_maximum=9999
 
-
-
 autocmd LocationChange '^(?!https?://(mail\.google\.com/(mail|a)/|(reader\.livedoor|fastladder)\.com/reader/|b\.hatena\.ne\.jp/(?!(entry|articles|guide))))' :set! browser.tabs.loadDivertedInBackground=false
 autocmd LocationChange '^https?://(mail\.google\.com/(mail|a)/|(reader\.livedoor|fastladder)\.com/reader/|b\.hatena\.ne\.jp/(?!(entry|articles|guide)))' :set! browser.tabs.loadDivertedInBackground=true
 "set! browser.tabs.loadDivertedInBackground=true
@@ -30,8 +28,7 @@ nnoremap l <C-n>
 nnoremap ; :
 nnoremap : ;
 nnoremap ,s :source ~/.vimperatorrc<CR>
-nnoremap w :ril add<CR>:echo "read it later!"<CR>
-nnoremap W :ril open 
+nnoremap c :copy titleAndURL<CR>
 
 nnoremap ZZ <NOP>
 
@@ -62,9 +59,8 @@ liberator.globalVariables.hBookmark_shortcuts = {
 if (typeof hBookmark != 'undefined') liberator.loadScript('chrome://hatenabookmark/content/vimperator/plugin/hatenabookmark.js', {__proto__: this});
 EOM
 
-
 let g:plugin_loader_roots = "~/.vimperator/vimperator-plugins"
-let g:plugin_loader_plugins = "_libly,account_switcher,appendAnchor,auto_reload,copy,feedSomeKeys_3,hatenaStar,multi_requester,pino,proxy,tombloo,walk-input,stella,opener,heuristic-search,bitly,x-hint,loginManager,statusline-toolbar,hint-tombloo-mod,prevent-pseudo-domain,lo,liberator-overlay-ext,auto-bookmark,QB,caret-hint,readitlater,access_hatena,github"
+let g:plugin_loader_plugins = "_libly,account_switcher,walk-input,appendAnchor,copy,feedSomeKeys_3,opener,heuristic-search,prevent-pseudo-domain,liberator-overlay-ext,github"
 
 lazy fmaps -u='^https?://mail\.google\.com/(mail|a)/' c j k n p o u e x s r a # [ ] z ? gi gs gt gd ga gc
 autocmd LocationChange '^(?!https?://(mail\.google\.com/(mail|a)/|(reader\.livedoor|fastladder)\.com/reader/|b\.hatena\.ne\.jp/(?!(entry|articles|guide))))' :set! browser.tabs.loadDivertedInBackground=false
