--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -36,9 +36,9 @@ unbind ^C
 bind t next-window
 bind C-t last-pane
 bind -r C-l next-layout
-bind c  new-window
-bind s split-window -v
-bind v split-window -h
+bind 'c' neww -c "#{pane_current_path}"
+bind 's' split-window -vc "#{pane_current_path}"
+bind 'v' split-window -hc "#{pane_current_path}"
 
 bind C-s split-window -v
 bind C-v split-window -h
@@ -69,3 +69,9 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+set-window-option -g utf8 on
