--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -27,7 +27,7 @@ set-window-option -g mode-keys vi
 set-window-option -g automatic-rename on
 set-option -g mouse-select-pane on
 setw -g mode-mouse on
-set-option -g base-index 1
+set-option -g base-index 0
 
 # KeyBindings
 unbind l
@@ -37,8 +37,8 @@ bind t next-window
 bind C-t last-pane
 bind -r C-l next-layout
 bind 'c' neww -c "#{pane_current_path}"
-bind 's' split-window -vc "#{pane_current_path}"
-bind 'v' split-window -hc "#{pane_current_path}"
+bind s split-window -vc "#{pane_current_path}"
+bind v split-window -hc "#{pane_current_path}"
 
 bind C-s split-window -v
 bind C-v split-window -h
